--- a/search-results.html
+++ b/search-results.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Noto+Sans+Egyptian+Hieroglyphs&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 </head>
 <body>
     <nav>
@@ -43,6 +43,21 @@
 
     <footer>
         <p>&copy; 2024 Egypt Tourism. All rights reserved.</p>
+        <p>Created by Mohammed Elwakil</p>
+        <div class="social-icons">
+            <a href="https://github.com" target="_blank" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+                <p>GitHub</p>
+            </a>
+            <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+                <i class="fab fa-facebook"></i>
+                <p>Facebook</p>
+            </a>
+            <a href="https://your-portfolio-link.com" target="_blank" aria-label="Portfolio">
+                <i class="fa-solid fa-rectangle-history-circle-user"></i>
+                <p>Portfolio</p>
+            </a>
+        </div>
     </footer>
 
     <script src="./Js/search-results.js"></script>
